@@ -1,0 +1,53 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+<system 
+	xmlns="http://www.eiffel.com/developers/xml/configuration-1-9-0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xsi:schemaLocation="http://www.eiffel.com/developers/xml/configuration-1-9-0 http://www.eiffel.com/developers/xml/configuration-1-9-0.xsd"
+	name="utility"
+	uuid="E1FFE100-60B0-0009-0001-000020130825"
+	library_target="utility">
+
+	<description>
+		description: "ECF file for the Gobo Eiffel Utility Library"
+		library: "Gobo Eiffel Utility Library"
+		copyright: "Copyright (c) 2001-2013, Eric Bezault and others"
+		license: "MIT License"
+	</description>
+
+	<target name="utility">
+		<root all_classes="true"/>
+		<file_rule>
+			<exclude>/\.svn$</exclude>
+			<exclude>/\.git$</exclude>
+		</file_rule>
+		<option warning="true" full_class_checking="true" is_attached_by_default="true" void_safety="all" is_void_safe="true"/>
+
+		<library name="base" location="$ISE_LIBRARY/library/base/base-safe.ecf" readonly="true">
+			<condition>
+				<custom name="GOBO_EIFFEL" excluded_value="ge"/>
+			</condition>
+		</library>
+
+		<library name="time" location="$ISE_LIBRARY/library/time/time-safe.ecf" readonly="true">
+			<condition>
+				<custom name="GOBO_EIFFEL" excluded_value="ge"/>
+			</condition>
+		</library>
+
+		<library name="free_elks" location="$GOBO/library/free_elks/library.ecf" readonly="true">
+			<condition>
+				<custom name="GOBO_EIFFEL" value="ge"/>
+			</condition>
+		</library>
+
+		<library name="kernel" location="$GOBO/library/kernel/library.ecf" readonly="true"/>
+
+		<library name="structure" location="$GOBO/library/structure/library.ecf" readonly="true"/>
+
+		<library name="lexical_skl" location="$GOBO/library/lexical/library_skl.ecf" readonly="true"/>
+
+		<library name="parse_skl" location="$GOBO/library/parse/library_skl.ecf" readonly="true"/>
+
+		<cluster name="utility" location="./" recursive="true"/>
+	</target>
+</system>
